syntax = "proto3";

import "graph.proto";
import "prohibition.proto";
import "obligation.proto";
import "operation.proto";
import "routine.proto";

option java_multiple_files = true;
option java_package = "gov.nist.csd.pm.proto.event";

package gov.nist.csd.pm.proto.event;

message PMEvent {
  oneof event {
    gov.nist.csd.pm.proto.graph.AssignmentCreated assignmentCreated = 1;
    gov.nist.csd.pm.proto.graph.AssociationCreated associationCreated = 2;
    gov.nist.csd.pm.proto.graph.PolicyClassCreated policyClassCreated = 3;
    gov.nist.csd.pm.proto.graph.UserAttributeCreated userAttributeCreated = 4;
    gov.nist.csd.pm.proto.graph.ObjectAttributeCreated objectAttributeCreated = 5;
    gov.nist.csd.pm.proto.graph.UserCreated userCreated = 6;
    gov.nist.csd.pm.proto.graph.ObjectCreated objectCreated = 7;
    gov.nist.csd.pm.proto.graph.AssignmentDeleted assignmentDeleted = 8;
    gov.nist.csd.pm.proto.graph.NodeDeleted nodeDeleted = 9;
    gov.nist.csd.pm.proto.graph.AssociationDeleted associationDeleted = 10;
    gov.nist.csd.pm.proto.graph.NodePropertiesSet nodePropertiesSet = 11;

    gov.nist.csd.pm.proto.prohibition.ProhibitionCreated prohibitionCreated = 12;
    gov.nist.csd.pm.proto.prohibition.ProhibitionDeleted prohibitionDeleted = 13;

    gov.nist.csd.pm.proto.obligation.ObligationCreated obligationCreated = 14;
    gov.nist.csd.pm.proto.obligation.ObligationDeleted obligationDeleted = 15;

    gov.nist.csd.pm.proto.operation.AdminOperationCreated adminOperationCreated = 16;
    gov.nist.csd.pm.proto.operation.AdminOperationDeleted adminOperationDeleted = 17;
    gov.nist.csd.pm.proto.operation.ResourceOperationsSet resourceOperationsSet = 18;

    gov.nist.csd.pm.proto.routine.AdminRoutineCreated adminRoutineCreated = 19;
    gov.nist.csd.pm.proto.routine.AdminRoutineDeleted adminRoutineDeleted = 20;
  }
}

message PMSnapshot {
  uint64 revision = 1;
  string json = 2;
}